2011-02-27 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc,
	  src/z80/gen.c,
	  src/z80/main.c,
	  src/z80/peep.c,
	  src/z80/peeph-z80.def:
	  Various minor improvements.

2011-02-26 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peeph-z80.def
	  Minor peephole improvements.

2011-02-24 Borut Razem <borut.razem AT gmail.com>

	* doc/sdccman.lyx: fixed bug #3191324: PIC instructions in documentation

2011-02-23 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/mcs51/gen.c,
	  src/z80/peeph-z80.def:
	  Merge from trunk.

2011-02-22 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/ralloc2.cc,
	  src/z80/gen.c,
	  src/z80/peeph-z80.def:
	  Improvements for --optralloc-all.

2011-02-20 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/main.c,
	  src/z80/gen.c,
	  src/z80/ralloc2.cc:
	  Fixes for --fomit-frame-pointer.
	* src/mcs51/gen.c:
	  Merge from trunk.

2011-02-19 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCralloc.hpp,
	  src/z80/ralloc2.cc:
	  Liverange fix.
	* src/z80/peep.c,
	  src/z80/gen.c:
	  Fixes for --reserve-regs-iy.
	* support/regression/tests/bug-3184920.c:
	  Merge from trunk.

2011-02-19 Maarten Brock <sourceforge.brock AT dse.nl>

	* debugger/mcs51/cmd.c,
	* debugger/mcs51/sdcdb.c,
	* debugger/mcs51/simi.c,
	* debugger/mcs51/symtab.c,
	* src/SDCCargs.h,
	* src/version.awk: cosmetic changes
	* src/pic14/gen.c (genDataPointerSet),
	* src/pic14/glue.c (emitIvals),
	* src/SDCCsystem.c: fixed warnings
	* src/SDCCerr.c (setWarningDisabled): check errNum
	* src/SDCCpeeph.c: added optimizeReturn
	* src/mcs51/peeph.def: disabled 237.x, fixed bug 1653651
	* src/SDCCglobl.h: added options.peepReturn
	* src/SDCCmain.c (parseCmdLine): added --peep-return & --no-peep-return
	* support/scripts/resource.rc: replaced include "winres.h" with "winresrc.h"
	* support/scripts/winres.h: deleted

2011-01-18 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peeph-z80.def,