@@ -1,3 +1,11 @@
+2011-03-02 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
+	* src/z80/ralloc2.cc:
+	  Improved coalescing.
+	* src/z80/gen.c,
+	  src/z80/peeph-z80.def:
+	  Minor improvements.
+
 2011-02-27 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/z80/ralloc2.cc,
